# glade-mcp-unity

./: .gitignore  README.md
.github/workflows/: release.yml
mcp-server/: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTING.md  pyproject.toml
mcp-server/eval/: README.md  __main__.py  run.py
mcp-server/eval/cases/: __init__.py  core.py  extended.py  negative.py
mcp-server/eval/harness/: client.py  mock_bridge.py  reporter.py
mcp-server/src/gladekit_mcp/: __init__.py  __main__.py  bridge.py  bridge_version.py  cli.py  cloud.py  prompts.py  search.py  server.py  skill.py  telemetry.py
mcp-server/src/gladekit_mcp/tools/: __init__.py  animation.py  camera.py  core.py  ik.py  input_system.py  lighting.py  materials.py  physics.py  prefabs.py  profiler.py  registry.py  runtime.py  scene.py  scripting.py  task_filter.py  terrain_nav.py  ui.py  vfx_audio.py
mcp-server/tests/: conftest.py  test_batch_execute.py  test_bridge.py  test_cli.py  test_cloud.py  test_compilation_errors.py  test_http_transport.py  test_integration.py  test_meta_tools.py  test_registry.py  test_search.py  test_server.py  test_skill.py  test_task_filter.py  test_telemetry.py
unity-bridge/: package.json
unity-bridge/Editor/Bridge/: BridgeModels.cs  GladeKitMCPWindow.cs  UnityBridgeServer.cs
unity-bridge/Editor/Services/: BackupManager.cs  DemoAssetsGuard.cs  GameObjectStateBackup.cs  SessionTracker.cs  UnityContextGatherer.cs
unity-bridge/Editor/Tools/: ToolExecutor.cs  ToolRegistry.cs  ToolUtils.cs
(+28 files in other folders)
