[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gladekit-mcp"
version = "0.2.0"
description = "MCP server for Unity game development — connect Cursor, Claude Code, Windsurf, and other AI clients to your Unity Editor."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
search = [
    "openai>=1.0.0",
    "numpy>=1.21.0",
]
# HTTP transport uses starlette + uvicorn. Both are already transitive deps of
# mcp>=1.0 — this extra exists purely for explicit documentation / pinning.
http = [
    "starlette>=0.27",
    "uvicorn>=0.31",
]
all = [
    "openai>=1.0.0",
    "numpy>=1.21.0",
    "starlette>=0.27",
    "uvicorn>=0.31",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
gladekit-mcp = "gladekit_mcp:main"
gladekit = "gladekit_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gladekit_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # long lines are unavoidable in tool-description strings
